--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,20 +24,16 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/SistemaAlmada.jar
+dist.jar=${dist.dir}/SistemaAlmada_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.derby.jar=C:\\Program Files\\Java\\jdk1.8.0_111\\db\\lib\\derby.jar
-file.reference.derbyclient.jar=C:\\Program Files\\Java\\jdk1.8.0_111\\db\\lib\\derbyclient.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.derbyclient.jar}:\
-    ${file.reference.derby.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=sistemaalmada.SistemaAlmada
+main.class=sistemaalmada_.SistemaAlmada_
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
