--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/SistemaAlmada_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -59,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=sistemaalmada_.SistemaAlmada_
+main.class=view.JDlgFuncionariosNovo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
